# FastTOML

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRE_RELEASE.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  wheels.yml
fasttoml/: __init__.py  _dumps.py
include/fasttoml/: toml_parser.hpp
scripts/: find_hanging_invalid.py  list_accepted_invalid.py  run_toml_test.py  toml_test_decoder.py
src/: python_bindings.cpp  toml_parser.cpp
tests/: __init__.py  benchmark_data.py  test_basic.py  test_benchmark.py  test_compatibility.py  test_dumps.py  test_errors.py  test_inline_datetime.py  test_multiline_unicode.py  test_tables.py  test_toml_test_suite.py
