[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.15", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "fasttoml"
version = "0.2.0b1"
description = "Fast TOML parser for Python with SIMD optimizations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "FastTOML Contributors"}
]
keywords = ["toml", "parser", "fast", "simd", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark", "tomli>=2.0; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/baksvell/FastTOML"
Documentation = "https://github.com/baksvell/FastTOML#readme"
Repository = "https://github.com/baksvell/FastTOML"
Issues = "https://github.com/baksvell/FastTOML/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore:SetuptoolsDeprecationWarning"]

[tool.setuptools]
packages = ["fasttoml"]

[tool.setuptools.package-data]
fasttoml = ["py.typed"]
